# MPMQ

./: pyproject.toml
mpmq/: broker.py  metrics.py  queue_pb2.py  queue_pb2_grpc.py  server.py
proto/: queue.proto
scripts/: gen_protos.sh
